8207748: Fix for 8202794 breaks tier1 builds

Reviewed-by: kbarrett, darcy