src/jdk.management/unix/native/libmanagement_ext/OperatingSystemImpl.c
@@ -75,6 +75,7 @@ static jlong page_size = 0;
 #endif /* _ALLBSD_SOURCE */
 
 #if defined(_ALLBSD_SOURCE)
+  #define dirent64 dirent
   #define readdir64 readdir
 #endif
 
@@ -422,7 +423,7 @@ Java_com_sun_management_internal_OperatingSystemImpl_getOpenFileDescriptorCount0
     return (100);
 #else /* solaris/linux */
     DIR *dirp;
-    struct dirent* dentp;
+    struct dirent64* dentp;
     jlong fds = 0;
 
 #if defined(_AIX)
